WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68223
[Qt] Crash when dragging google maps.
https://bugs.webkit.org/show_bug.cgi?id=68223
Summary
[Qt] Crash when dragging google maps.
Leo Yang
Reported
2011-09-15 22:42:23 PDT
Use QtTestBrowser 1. Load
http://maps.google.com
. 2. Drag the map. It's very likely to crash.
Attachments
Patch
(4.96 KB, patch)
2011-09-15 22:57 PDT
,
Leo Yang
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Leo Yang
Comment 1
2011-09-15 22:57:23 PDT
Created
attachment 107605
[details]
Patch
Adam Barth
Comment 2
2011-09-15 23:43:25 PDT
Comment on
attachment 107605
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=107605&action=review
> Source/WebCore/platform/qt/CursorQt.cpp:203 > + m_platformCursor = new QCursor(Qt::ArrowCursor);
m_platformCursor isn't any sort of smart pointer?
Leo Yang
Comment 3
2011-09-16 00:15:18 PDT
Committed
r95275
: <
http://trac.webkit.org/changeset/95275
>
Alexis Menard (darktears)
Comment 4
2011-09-16 04:35:06 PDT
Comment on
attachment 107605
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=107605&action=review
>> Source/WebCore/platform/qt/CursorQt.cpp:203 >> + m_platformCursor = new QCursor(Qt::ArrowCursor); > > m_platformCursor isn't any sort of smart pointer?
It's deleted in the destructor but yes could be an improvement. Though it is define as mutable PlatformCursor m_platformCursor; for every port except Mac where it is : mutable RetainPtr<NSCursor> m_platformCursor; Definitively some improvements possible here.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug